@@ -18,58 +18,54 @@ import java.util.stream.Collectors;
  */
 class ColumnsMetadataHandler implements MetadataHandler {
 
-    final List<MetadataColumDefinition> columnsDefinition;
-    final List<String> columnsName;
-    final List<String> escapedColumnsName;
+    private final List<MetadataColumDefinition> columnsDefinition;
+    private final List<String> columnsName;
+    private final List<String> escapedColumnsName;
+    private final String insertClause;
 
-    final MariaDbFilterMapper filterMapper;
-    final List<String> indexes;
+    private final MariaDbFilterMapper filterMapper;
+    private final List<String> indexes;
 
     /**
      * MetadataHandler constructor
      * @param config {@link MetadataStorageConfig} configuration
      */
     public ColumnsMetadataHandler(MetadataStorageConfig config, List<String> sqlKeywords) {
-        List<String> columnsDefinitionList =
-                ensureNotEmpty(config.columnDefinitions(), "Metadata definition");
+        List<String> columnsDefinitionList = ensureNotEmpty(config.columnDefinitions(), "Metadata definition");
         this.filterMapper = new ColumnFilterMapper();
 
         // enquote identifier if keywords
-        this.indexes =
-                ((List<String>) getOrDefault(config.indexes(), Collections.emptyList()))
-                        .stream()
-                                .map(
-                                        key -> {
-                                            if (sqlKeywords.contains(
-                                                    key.toLowerCase(Locale.ROOT))) {
-                                                try {
-                                                    return org.mariadb.jdbc.Driver
-                                                            .enquoteIdentifier(key, true);
-                                                } catch (SQLException e) {
-                                                    // eat
-                                                }
-                                            }
-                                            return key;
-                                        })
-                                .toList();
-        this.columnsDefinition =
-                columnsDefinitionList.stream()
-                        .map(str -> MetadataColumDefinition.from(str, sqlKeywords))
-                        .collect(Collectors.toList());
-        this.escapedColumnsName =
-                columnsDefinition.stream()
-                        .map(MetadataColumDefinition::getEscapedName)
-                        .collect(Collectors.toList());
+        this.indexes = ((List<String>) getOrDefault(config.indexes(), Collections.emptyList()))
+                .stream()
+                        .map(key -> {
+                            if (sqlKeywords.contains(key.toLowerCase(Locale.ROOT))) {
+                                try {
+                                    return org.mariadb.jdbc.Driver.enquoteIdentifier(key, true);
+                                } catch (SQLException e) {
+                                    // eat
+                                }
+                            }
+                            return key;
+                        })
+                        .toList();
+        this.columnsDefinition = columnsDefinitionList.stream()
+                .map(str -> MetadataColumDefinition.from(str, sqlKeywords))
+                .collect(Collectors.toList());
+        this.escapedColumnsName = columnsDefinition.stream()
+                .map(MetadataColumDefinition::escapedName)
+                .collect(Collectors.toList());
+        this.insertClause = ", "
+                + this.escapedColumnsName.stream()
+                        .map(c -> String.format("%s = VALUES(%s)", c, c))
+                        .collect(Collectors.joining(","));
         this.columnsName =
-                columnsDefinition.stream()
-                        .map(MetadataColumDefinition::getName)
-                        .collect(Collectors.toList());
+                columnsDefinition.stream().map(MetadataColumDefinition::name).collect(Collectors.toList());
     }
 
     @Override
     public String columnDefinitionsString() {
         return this.columnsDefinition.stream()
-                .map(MetadataColumDefinition::getFullDefinition)
+                .map(MetadataColumDefinition::fullDefinition)
                 .collect(Collectors.joining(","));
     }
 
@@ -81,42 +77,26 @@ class ColumnsMetadataHandler implements MetadataHandler {
     @Override
     public void createMetadataIndexes(Statement statement, String table) {
         StringBuilder sb = new StringBuilder();
-        this.indexes.stream()
-                .map(String::trim)
-                .forEach(
-                        index -> {
-                            sb.append(",")
-                                    .append(
-                                            MariaDbValidator.validateAndEnquoteIdentifier(
-                                                    index, false));
-                        });
+        this.indexes.stream().map(String::trim).forEach(index -> {
+            sb.append(",").append(MariaDbValidator.validateAndEnquoteIdentifier(index, false));
+        });
         String indexFields = sb.toString().substring(1);
-        String indexSql =
-                String.format(
-                        "create index if not exists %s on %s ( %s )",
-
-                        (table + "_metadata_idx").replaceAll("[ \\`\"'\\\\\\P{Print}]", ""),
-                        table,
-                        indexFields);
+        String indexSql = "create index if not exists %s on %s ( %s )"
+                .formatted((table + "_metadata_idx").replaceAll("[ \\`\"'\\\\\\P{Print}]", ""), table, indexFields);
         try {
             statement.executeUpdate(indexSql);
         } catch (SQLException e) {
-            throw new RuntimeException(
-                    String.format("Cannot create indexes on %s: %s", indexFields, e));
+            throw new RuntimeException(String.format("Cannot create indexes on %s: %s", indexFields, e));
         }
     }
 
     @Override
     public String insertClause() {
-        return ", "
-                + this.escapedColumnsName.stream()
-                        .map(c -> String.format("%s = VALUES(%s)", c, c))
-                        .collect(Collectors.joining(","));
+        return insertClause;
     }
 
     @Override
-    public void setMetadata(
-            PreparedStatement upsertStmt, Integer parameterInitialIndex, Metadata metadata) {
+    public void setMetadata(PreparedStatement upsertStmt, Integer parameterInitialIndex, Metadata metadata) {
         int i = 0;
         // only column names fields will be stored
         Map<String, Object> meta = metadata.toMap();
